--- a/Home_Sales_starter_code_colab.ipynb
+++ b/Home_Sales_starter_code_colab.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/dcheung0720/Home_Sales/blob/main/Home_Sales_starter_code_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -18,7 +8,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_KW73O2e3dw",
-        "outputId": "b538dabb-1029-497f-f73a-19bf472a3215"
+        "outputId": "892f86de-abfa-4e58-d3f4-265f6e22cadc"
       },
       "outputs": [
         {
@@ -26,19 +16,19 @@
           "name": "stdout",
           "text": [
             "\r0% [Working]\r            \rGet:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,626 B]\n",
-            "\r0% [Connecting to archive.ubuntu.com] [Waiting for headers] [1 InRelease 3,626 B/3,626 B 100%] [Conn\r                                                                                                    \rGet:2 http://security.ubuntu.com/ubuntu jammy-security InRelease [129 kB]\n",
-            "\r0% [Connecting to archive.ubuntu.com] [2 InRelease 14.2 kB/129 kB 11%] [1 InRelease 3,626 B/3,626 B \r0% [Connecting to archive.ubuntu.com] [2 InRelease 14.2 kB/129 kB 11%] [Connecting to ppa.launchpadc\r                                                                                                    \rHit:3 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
+            "Get:2 http://security.ubuntu.com/ubuntu jammy-security InRelease [129 kB]\n",
+            "Hit:3 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
             "Get:4 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [128 kB]\n",
-            "Get:5 http://archive.ubuntu.com/ubuntu jammy-backports InRelease [127 kB]\n",
-            "Get:6 http://security.ubuntu.com/ubuntu jammy-security/main amd64 Packages [1,857 kB]\n",
-            "Hit:7 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
-            "Get:8 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [2,128 kB]\n",
-            "Hit:9 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
-            "Get:10 http://security.ubuntu.com/ubuntu jammy-security/universe amd64 Packages [1,084 kB]\n",
-            "Get:11 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1,376 kB]\n",
-            "Get:12 http://archive.ubuntu.com/ubuntu jammy-backports/universe amd64 Packages [31.8 kB]\n",
-            "Get:13 http://archive.ubuntu.com/ubuntu jammy-backports/main amd64 Packages [81.0 kB]\n",
-            "Fetched 6,946 kB in 1s (6,214 kB/s)\n",
+            "Hit:5 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
+            "Hit:6 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
+            "Get:7 http://archive.ubuntu.com/ubuntu jammy-backports InRelease [127 kB]\n",
+            "Get:8 http://security.ubuntu.com/ubuntu jammy-security/universe amd64 Packages [1,084 kB]\n",
+            "Get:9 http://security.ubuntu.com/ubuntu jammy-security/main amd64 Packages [1,857 kB]\n",
+            "Get:10 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1,376 kB]\n",
+            "Get:11 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [2,128 kB]\n",
+            "Get:12 http://archive.ubuntu.com/ubuntu jammy-backports/main amd64 Packages [81.0 kB]\n",
+            "Get:13 http://archive.ubuntu.com/ubuntu jammy-backports/universe amd64 Packages [31.8 kB]\n",
+            "Fetched 6,946 kB in 3s (2,410 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -91,7 +81,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6aa277cd-fccb-4d45-8601-ee233b1dac19"
+        "outputId": "f6bb0516-60fd-4cf2-b0ce-96a089c71465"
       },
       "outputs": [
         {
@@ -159,7 +149,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d59718c6-65fe-41a6-b6c1-1091e1b8c585"
+        "outputId": "be9e25b9-ec44-4514-ec46-4016a6868289"
       },
       "outputs": [
         {
@@ -195,7 +185,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "174b361a-78f3-46d3-939d-10ec369767ad"
+        "outputId": "677fdfb7-ff1e-43da-a32e-76eca5c5a5f6"
       },
       "outputs": [
         {
@@ -236,7 +226,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "04a13105-23c7-4154-afe4-c502125f4869"
+        "outputId": "f5e9266a-5fc2-4218-c639-ac85232028d3"
       },
       "outputs": [
         {
@@ -279,7 +269,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "9f8618d1-580f-4ac5-aa4a-b9bd6cea800b"
+        "outputId": "8b7e4f67-ef0d-426c-b205-7e4e4ed3a89b"
       },
       "outputs": [
         {
@@ -312,7 +302,7 @@
             "+----+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.40732240676879883 seconds ---\n"
+            "--- 0.4635028839111328 seconds ---\n"
           ]
         }
       ],
@@ -341,7 +331,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "13815501-6e84-4d5f-e9fa-815aebd9c9e0"
+        "outputId": "dc1b90d7-125a-486d-9bc9-1fd63861af13"
       },
       "outputs": [
         {
@@ -368,7 +358,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cef905aa-98ec-41c5-d226-8f5fbfe67caa"
+        "outputId": "5fb2574a-a25c-43bc-b288-44598a919ecc"
       },
       "outputs": [
         {
@@ -389,13 +379,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "429f9e65-9cca-40e0-ab30-1fc7568de6c8"
+        "outputId": "c2909a92-654c-442d-8595-7268246da505"
       },
       "outputs": [
         {
@@ -428,7 +418,7 @@
             "+----+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.20613884925842285 seconds ---\n"
+            "--- 0.22320985794067383 seconds ---\n"
           ]
         }
       ],
@@ -452,7 +442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {
         "id": "Qm12WN9isHBR"
       },
@@ -464,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {
         "id": "AZ7BgY61sRqY"
       },
@@ -476,7 +466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {
         "id": "J6MJkHfvVcvh"
       },
@@ -488,13 +478,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_Vhb52rU1Sn",
-        "outputId": "b94f6639-6bee-41b5-fa43-50eb5baba908"
+        "outputId": "482b567c-9a02-4896-d9f5-d927cc848488"
       },
       "outputs": [
         {
@@ -527,7 +517,7 @@
             "+----+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.5427958965301514 seconds ---\n"
+            "--- 0.48812007904052734 seconds ---\n"
           ]
         }
       ],
@@ -551,13 +541,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {
         "id": "hjjYzQGjtbq8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "18a51c2b-313b-405f-ffbf-b4abf816dde3"
+        "outputId": "e55f52cb-f565-471e-f46a-917bad7b9c0d"
       },
       "outputs": [
         {
@@ -568,7 +558,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 16
         }
       ],
       "source": [
@@ -578,13 +568,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {
         "id": "Sy9NBvO7tlmm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f4280bea-4fc0-4bd9-a07d-35ca1d57fcd3"
+        "outputId": "a37dea9d-9f76-4b50-de83-13d8838b849f"
       },
       "outputs": [
         {
@@ -595,7 +585,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 17
         }
       ],
       "source": [
@@ -605,7 +595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "Si-BNruRUGK3"
       },
@@ -616,8 +606,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "V28",
-      "include_colab_link": true
+      "gpuType": "V28"
     },
     "kernelspec": {
       "display_name": "Python 3",
